--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,25 +7,21 @@
 
 	// Install Dev Container Features. More info: https://containers.dev/features
 	"features": {
-		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
+		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 		// Install JupyterLab and IRkernel.
 		// More info: https://github.com/rocker-org/devcontainer-templates/tree/main/src/r-ver
-		// "ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
-		// 	"version": "none",
-		// 	"installJupyterlab": true
-		// }
+		"ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
+			"version": "none",
+			"installJupyterlab": true
+		}
 	},
 
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				// Add Jupyter and Python vscode extensions
-				// "ms-toolsai.jupyter",
-				// "ms-toolsai.jupyter-renderers",
-				// "ms-python.python",
-				// "ms-python.vscode-pylance",
-				// "vsls-contrib.codetour"
-				// "GitHub.copilot"
+				"ms-azuretools.vscode-docker",
+				"ms-toolsai.jupyter",
+				"ms-python.python"
 			]
 		}
 	},
